--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <main class="cv-layout">
   <!-- Colonne gauche -->
   <aside class="cv-sidebar">
-  <img src="img/Photo Linkedin.jpg" alt="Photo de Thierry" class="profile-photo" />
+  <img src="Photo Linkedin.jpg" alt="Photo de Thierry" class="profile-photo" />
   <h2>Thierry SENE</h2>
     <p><strong>Étudiant en ingénierie</strong></p>
     <p>Mathématiques Appliquées et Modélisation</p>
