--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
   <main class="cv-layout">
   <!-- Colonne gauche -->
   <aside class="cv-sidebar">
-  <img src="img/Photo Linkedin.jpg" alt="Photo de Thierry" class="profile-photo" />
+  <img src="Photo Linkedin.jpg" alt="Photo de Thierry" class="profile-photo" />
   <h2>Thierry SENE</h2>
     <p><strong>Email :</strong> <a href="mailto:tsene05@gmail.com">tsene05@gmail.com</a></p>
     <p><strong>Téléphone :</strong> +33 7 84 72 96 29</p>
