--- a/contact.html
+++ b/contact.html
@@ -25,19 +25,19 @@
   <h1>Pour me contacter</h1>
   <ul class="contact-list">
     <li>
-      <img src="img/mail.png" alt="Email" width="20" />
+      <img src="mail.png" alt="Email" width="20" />
       <a href="mailto:tsene05@gmail.com">tsene05@gmail.com</a>
     </li>
     <li>
-      <img src="img/github.png" alt="GitHub" width="20" />
+      <img src="github.png" alt="GitHub" width="20" />
       <a href="https://github.com/ThierryTsc" target="_blank">Mon GitHub</a>
     </li>
     <li>
-      <img src="img/linkedin.png" alt="LinkedIn" width="20" />
+      <img src="linkedin.png" alt="LinkedIn" width="20" />
       <a href="https://www.linkedin.com/in/thierry-sene-418bbb2a4/" target="_blank">Mon LinkedIn</a>
     </li>
     <li>
-      <img src="img/localisation.png" alt="Localisation" width="20" />
+      <img src="localisation.png" alt="Localisation" width="20" />
       Villeurbanne, France
     </li>
   </ul>
