--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,16 @@
   <title>Contact – Thierry</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-sOMEKEYHERE" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css"/>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
 </head>
 <body>
   <header class="site-header">
     <nav class="navbar">
       <a href="index.html" class="logo">Thierry</a>
-      <ul class="nav-links">
+          <!-- bouton menu -->
+    <button class="menu-toggle" id="menu-toggle">☰</button> 
+      <ul class="nav-links" id="nav-links">
         <li><a href="about.html">À propos</a></li>
         <li><a href="projets.html">Projets</a></li>
         <li><a href="competences.html">Compétences</a></li>
@@ -25,19 +29,19 @@
   <h1>Pour me contacter</h1>
   <ul class="contact-list">
     <li>
-      <img src="mail.png" alt="Email" width="20" />
+      <img src="img/mail.png" alt="Email" width="20" />
       <a href="mailto:tsene05@gmail.com">tsene05@gmail.com</a>
     </li>
     <li>
-      <img src="github.png" alt="GitHub" width="20" />
+      <img src="img/github.png" alt="GitHub" width="20" />
       <a href="https://github.com/ThierryTsc" target="_blank">Mon GitHub</a>
     </li>
     <li>
-      <img src="linkedin.png" alt="LinkedIn" width="20" />
+      <img src="img/linkedin.png" alt="LinkedIn" width="20" />
       <a href="https://www.linkedin.com/in/thierry-sene-418bbb2a4/" target="_blank">Mon LinkedIn</a>
     </li>
     <li>
-      <img src="localisation.png" alt="Localisation" width="20" />
+      <img src="img/localisation.png" alt="Localisation" width="20" />
       Villeurbanne, France
     </li>
   </ul>
@@ -48,5 +52,15 @@
   <footer class="site-footer">
     <p>&copy; 2025 Thierry</p>
   </footer>
+  <script src="script.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 800,
+    once: true
+  });
+</script>
+
+
 </body>
 </html>
